--- a/src/sass/config/_colors.scss
+++ b/src/sass/config/_colors.scss
@@ -1,8 +1,8 @@
-@use "../lib/config" as *;
+@use "../lib/config";
 $config: (
   white: #ffffff,
   black: #28221b,
   grey: #696e6c,
 );
 
-@include merge-config("colors", $config);
+@include config.merge("colors", $config);
