--- a/src/sass/config/_grid.scss
+++ b/src/sass/config/_grid.scss
@@ -1,4 +1,4 @@
-@use "../lib/config" as *;
+@use "../lib/config";
 $config: (
   unit: 1em,
   //  Unit used in the gridz-system. Possible values : 1px, 1em, 1rem, 1banana (all available css units except '%')
@@ -9,4 +9,4 @@ $config: (
   gutter_size: 24, //  Base gutter-size (without units but based on pixels)
 );
 
-@include merge-config("grid", $config);
+@include config.merge("grid", $config);
