--- a/src/stubs/sass/config/_fonts.scss
+++ b/src/stubs/sass/config/_fonts.scss
@@ -23,4 +23,4 @@
 //     fonts-stack: $fonts-stack,
 // );
 
-// @include merge-config('fonts', $config);
+// @include config.merge('fonts', $config);
