--- a/src/stubs/sass/config/_grid.scss
+++ b/src/stubs/sass/config/_grid.scss
@@ -1,4 +1,4 @@
-// @use '@whitecube/white-sass/tools';
+// @use '@whitecube/white-sass/config';
 // $config:  (
 //     unit: 1em, //  Unit used in the gridz-system. Possible values : 1px, 1em, 1rem, 1banana (all available css units except '%')
 //     columns: 14, //  Number of columns you want in the grid
@@ -6,4 +6,4 @@
 //     gutter_size: 24, //  Base gutter-size (without units but based on pixels)
 // );
 
-// @include merge-config('grid', $config);
+// @include config.merge('grid', $config);
