--- a/src/sass/config/_fonts.scss
+++ b/src/sass/config/_fonts.scss
@@ -1,4 +1,4 @@
-@use "../lib/config" as *;
+@use "../lib/config";
 
 // Available fonts declaration. Map format :
 // $fonts-stack: (
@@ -37,4 +37,4 @@ $config: (
   fonts-stack: $fonts-stack,
 );
 
-@include merge-config("fonts", $config);
+@include config.merge("fonts", $config);
