--- a/src/sass/tools/functions/_color.scss
+++ b/src/sass/tools/functions/_color.scss
@@ -4,8 +4,8 @@
 // **********************************************************
 
 @use "sass:map";
-@use "../../lib/config" as *;
+@use "../../lib/config";
 
-@function color($name, $palette: config("colors")) {
+@function color($name, $palette: config.get("colors")) {
   @return map.get($palette, $name);
 }
