--- a/src/sass/tools/functions/_str-replace.scss
+++ b/src/sass/tools/functions/_str-replace.scss
@@ -2,9 +2,10 @@
 // **********************************************************
 // replaces all occurances of $search with $replace in $string
 // **********************************************************
+@use "sass:string";
 
 @function str-replace($string, $search, $replace: "") {
-  $index: str-index($string, $search);
+  $index: string.index($string, $search);
   @if $index {
     @return str-slice($string, 1, $index - 1) + $replace +
       str-replace(
