--- a/src/sass/tools/mixins/_import-fonts.scss
+++ b/src/sass/tools/mixins/_import-fonts.scss
@@ -1,30 +1,33 @@
+@use "sass:map";
+@use "../../lib/config";
+@use "../mixins/font-face" as *;
+@use "../functions/map-deep-get" as *;
+
 // - @include import-fonts($font-stack)
 // **********************************************************
 // Creates @font-face declarations for all used and defined
 // fonts in current porject state
 // **********************************************************
-@use "track-fonts";
-@use "../../lib/config";
-@use "../mixins/font-face" as *;
-@use "../functions/map-deep-get" as *;
 
 @mixin import-fonts($font-stack: config.get("fonts.fonts-stack")) {
-  @each $group, $variations in track-fonts.$used-fonts {
+  @each $group, $variations in config.get("fonts.used-fonts") {
     @each $variant in $variations {
-      $font-properties: map-deep-get(fonts.$fonts-stack, $group, $variant);
+      $font-properties: config.get("fonts.fonts-stack.#{$group}.#{$variant}");
+
       @if $font-properties {
         $font-file: if(
-          map-has-key($font-properties, file),
+          map.has-key($font-properties, file),
           map.get($font-properties, file),
           "#{$group}-#{$variant}"
         );
-        $font-path: "#{fonts.$fonts-path}#{$font-file}";
+
+        $font-path: "#{config.get("fonts.fonts-path")}#{$font-file}";
         $font-family: map.get($font-properties, family);
         $font-formats: map.get($font-properties, formats);
         $font-weight: map.get($font-properties, weight);
         $font-style: map.get($font-properties, style);
         $font-bust: if(
-          map-has-key($font-properties, bust),
+          map.has-key($font-properties, bust),
           map.get($font-properties, bust),
           false
         );
