--- a/tests/sass/app.scss
+++ b/tests/sass/app.scss
@@ -1,2 +1,3 @@
 @use "../../src/sass/index";
-@use "./tools/tools";
+@use "../../src/sass/tools/mixins/import-fonts" as fonts;
+@use "./tools/tools" as *;
