--- a/tests/sass/tools/_tools.scss
+++ b/tests/sass/tools/_tools.scss
@@ -13,6 +13,8 @@
 @use "functions/px";
 @use "functions/rem";
 @use "functions/rmUnit";
+@use "functions/str-replace";
+// @use "functions/str-split"; //tested withing the config system
 // str-replace used on font-face;
 // map-deep-get used everywhere with font;
 
