--- a/src/sass/tools/functions/_str-replace.scss
+++ b/src/sass/tools/functions/_str-replace.scss
@@ -7,9 +7,9 @@
 @function str-replace($string, $search, $replace: "") {
   $index: string.index($string, $search);
   @if $index {
-    @return str-slice($string, 1, $index - 1) + $replace +
+    @return string.slice($string, 1, $index - 1) + $replace +
       str-replace(
-        str-slice($string, $index + str-length($search)),
+        string.slice($string, $index + string.length($search)),
         $search,
         $replace
       );
