add a more flexible way to use colors

--- a/src/sass/tools/_tools.scss
+++ b/src/sass/tools/_tools.scss
@@ -9,6 +9,7 @@
 @forward "functions/fixedGut";
 @forward "functions/font-size-unitless";
 @forward "functions/gutter";
+@forward "functions/list-concat";
 @forward "functions/map-deep-get";
 @forward "functions/mid";
 @forward "functions/px";
