--- a/src/stubs/sass/config/_fonts.scss
+++ b/src/stubs/sass/config/_fonts.scss
@@ -1,4 +1,4 @@
-//@use '../lib/config' as *;
+// @use '@whitecube/white-sass/config';
 
 // Available fonts declaration. Map format :
 // $fonts-stack: (
