--- a/src/stubs/sass/config/_breakpoints.scss
+++ b/src/stubs/sass/config/_breakpoints.scss
@@ -1,12 +1,12 @@
 // @use '@whitecube/white-sass/config';
 
 // $config: (
-//     xxl: 1800px,
-//     xl: 1200px,
-//     l: 920px,
-//     m: 760px,
-//     s: 640px,
-//     xs: 480px,
+//     'xxl': 1800px,
+//     'xl': 1200px,
+//     'l': 920px,
+//     'm': 760px,
+//     's': 640px,
+//     'xs': 480px,
 // );
 
 // @include config.merge('breakpoints', $config);
