--- a/src/stubs/sass/config/_colors.scss
+++ b/src/stubs/sass/config/_colors.scss
@@ -1,9 +1,9 @@
 // @use '@whitecube/white-sass/config';
 
 // $config: (
-//   white: #ffffff,
-//   black: #28221b,
-//   grey: #696e6c,
+//   'white': #ffffff,
+//   'black': #28221b,
+//   'grey': #696e6c,
 // );
 
 // @include config.merge('colors', $config);
