--- a/src/sass/config/_colors.scss
+++ b/src/sass/config/_colors.scss
@@ -1,8 +1,8 @@
 @use "../lib/config";
 $config: (
-  white: #ffffff,
-  black: #28221b,
-  grey: #696e6c,
+  "white": #ffffff,
+  "black": #28221b,
+  "grey": #696e6c,
 );
 
 @include config.merge("colors", $config);
