--- a/src/sass/config/_grid.scss
+++ b/src/sass/config/_grid.scss
@@ -1,12 +1,12 @@
 @use "../lib/config";
 $config: (
-  unit: 1em,
+  "unit": 1em,
   //  Unit used in the gridz-system. Possible values : 1px, 1em, 1rem, 1banana (all available css units except '%')
-  columns: 14,
+  "columns": 14,
   //  Number of columns you want in the grid
-  width: 1200,
+  "width": 1200,
   //  Base grid-size (without units but based on pixels)
-  gutter_size: 24, //  Base gutter-size (without units but based on pixels)
+  "gutter_size": 24, //  Base gutter-size (without units but based on pixels)
 );
 
 @include config.merge("grid", $config);
