--- a/src/sass/tools/_tools.scss
+++ b/src/sass/tools/_tools.scss
@@ -13,8 +13,10 @@
 @forward "functions/map-deep-get";
 @forward "functions/mid";
 @forward "functions/px";
+@forward "functions/radius";
 @forward "functions/rem";
 @forward "functions/rmUnit";
+@forward "functions/spacing";
 @forward "functions/str-replace";
 @forward "functions/str-split";
 
