Css variable draft, config files has to be completed

--- a/src/sass/config/_breakpoints.scss
+++ b/src/sass/config/_breakpoints.scss
@@ -1,16 +1,11 @@
 @use "../lib/config";
 
-// @if global.$env != "production" {
-//   $mq-show-breakpoints: (xs, s, m, l, xl) !default;
-// }
-
 $config: (
-  "xxl": 1800px,
-  "xl": 1200px,
-  "l": 920px,
-  "m": 760px,
-  "s": 640px,
-  "xs": 480px,
+  "default": "desktop",
+  "breakpoints": (
+    "desktop": 1200px,
+    "mobile": 640px,
+  ),
 );
 
 @include config.merge("breakpoints", $config);
