--- a/src/stubs/sass/config/_radius.scss
+++ b/src/stubs/sass/config/_radius.scss
@@ -1,12 +1,12 @@
 /*
-*   All typography related variables.
+*   All radius related variables.
 */
 
-// @use '@whitecube/white-sass/config';
+// @use '../lib/config';
 
 // $config: (
-//     'card': 20,
-//     'button': 16,
+//     'cards': 20,
+//     'buttons': 16,
 //     'label': 8,
 // );
 
