--- a/src/stubs/sass/config/_spacings.scss
+++ b/src/stubs/sass/config/_spacings.scss
@@ -1,35 +1,34 @@
 /*
-*   All typography related variables.
+*   All spacings related variables.
 */
 
 // @use '@whitecube/white-sass/config';
 
 // $config: (
-//     'gap': (
-//         'xxxs': 4,
-//         'xxs': 8,
-//         'xs': 12,
-//         's': 16,
-//         'm': 20,
-//         'l': 24,
-//         'xl': 36,
-//         'xxl': 48,
+//     'desktop': (
+//         'gap': (
+//             'xxxs': 4,
+//             'xxs': 8,
+//             'xs': 12,
+//             's': 16,
+//             'm': 20,
+//             'l': 24,
+//             'xl': 36,
+//             'xxl': 48,
+//         ),
+//         'padding': (
+//             's': 40,
+//             'm': 64,
+//             'l': 80,
+//             'xl': 168,
+//         ),
 //     ),
-//     'gap': (
-//         'xxxs': 4,
-//         'xxs': 8,
-//         'xs': 12,
-//         's': 16,
-//         'm': 20,
-//         'l': 24,
-//         'xl': 36,
-//         'xxl': 48,
-//     ),
-//     'padding': (
-//         's': 40,
-//         'm': 64,
-//         'l': 80,
-//         'xl': 168,
+
+//     'mobile': (
+//         'padding': (
+//             's': 20,
+//             'm': 10,
+//         ),
 //     ),
 // );
 
