--- a/src/stubs/sass/config/_typography.scss
+++ b/src/stubs/sass/config/_typography.scss
@@ -7,30 +7,34 @@
 // $config: (
 //     'base-font-size': 16,
 //     'line-height': (
-//         'h1': 72,
-//         'h2': 64,
-//         'h3': 48,
-//         'h4': 44,
-//         'h5': 32,
-//         'h6': 28,
-//         'body-single': 28,
-//         'body': 24,
-//         'body-listing': 24,
-//         'small-text': 20,
-//         'label': 14,
+//         'desktop': (
+//             'h1': 72,
+//             'h2': 64,
+//             'h3': 48,
+//             'h4': 44,
+//             'h5': 32,
+//             'h6': 28,
+//             'body-single': 28,
+//             'body': 24,
+//             'body-listing': 24,
+//             'small-text': 20,
+//             'label': 14,
+//         ),
 //     ),
-//     'font-size': (
-//         'h1': 64,
-//         'h2': 56,
-//         'h3': 44,
-//         'h4': 36,
-//         'h5': 24,
-//         'h6': 20,
-//         'body-single': 18,
-//         'body': 16,
-//         'body-listing': 16,
-//         'small-text': 14,
-//         'label': 12,
+//     'font-sizes': (
+//         'desktop': (
+//             'h1': 64,
+//             'h2': 56,
+//             'h3': 44,
+//             'h4': 36,
+//             'h5': 24,
+//             'h6': 20,
+//             'body-single': 18,
+//             'body': 16,
+//             'body-listing': 16,
+//             'small-text': 14,
+//             'label': 12,
+//         ),
 //     ),
 // );
 
