--- a/src/stubs/sass/base/_base.scss
+++ b/src/stubs/sass/base/_base.scss
@@ -1,20 +1,1 @@
-@use "@whitecube/white-sass/tools" as *;
-@use "@whitecube/white-sass/lib/config";
-
-:root {
-  // Will create --colors-key1-key2 type of css variables
-  @include create-css-var("colors", config.get("colors"));
-  @include create-css-var("radius", config.get("radius"), "rem");
-
-  @include create-css-var-responsive(
-    "fs",
-    config.get("typography.font-sizes"),
-    "rem"
-  );
-  @include create-css-var-responsive(
-    "lh",
-    config.get("typography.line-height"),
-    "rem"
-  );
-  @include create-css-var-responsive("spacing", config.get("spacings"), "rem");
-}
+@use "foundation";
