--- a/src/stubs/sass/parts/_title.scss
+++ b/src/stubs/sass/parts/_title.scss
@@ -4,25 +4,35 @@
   &--h1 {
     font-size: font-size("h1");
     line-height: line-height("h1");
+    letter-spacing: -0.01em;
   }
+
   &--h2 {
     font-size: font-size("h2");
     line-height: line-height("h2");
+    letter-spacing: -0.01em;
   }
+
   &--h3 {
     font-size: font-size("h3");
     line-height: line-height("h3");
   }
+
   &--h4 {
     font-size: font-size("h4");
     line-height: line-height("h4");
+    letter-spacing: -0.01em;
   }
+
   &--h5 {
     font-size: font-size("h5");
     line-height: line-height("h5");
+    letter-spacing: -0.01em;
   }
+
   &--h6 {
     font-size: font-size("h6");
     line-height: line-height("h6");
+    letter-spacing: -0.01em;
   }
 }
