Update typography vars

--- a/src/stubs/sass/config/_typography.scss
+++ b/src/stubs/sass/config/_typography.scss
@@ -20,6 +20,16 @@
 //             'small-text': 20,
 //             'label': 14,
 //         ),
+//         'mobile': (
+//             'h1': 40,
+//             'h2': 36,
+//             'h3': 32,
+//             'h4': 28,
+//             'h5': 24,
+//             'h6': 24,
+//             'body-single': 24,
+//             'label': 18,
+//         ),
 //     ),
 //     'font-sizes': (
 //         'desktop': (
@@ -34,6 +44,15 @@
 //             'body-listing': 16,
 //             'small-text': 14,
 //             'label': 12,
+//         ),
+//         'mobile': (
+//             'h1': 36,
+//             'h2': 32,
+//             'h3': 28,
+//             'h4': 24,
+//             'h5': 20,
+//             'h6': 18,
+//             'body-single': 16,
 //         ),
 //     ),
 // );
