--- a/src/stubs/sass/config/_colors.scss
+++ b/src/stubs/sass/config/_colors.scss
@@ -1,6 +1,6 @@
 // @use '@whitecube/white-sass/config';
 // $config: (
-//     'wireframe': (
+//     'grey': (
 //         '000': #ffffff,
 //         '50': #f8f9fa,
 //         '100': #ebedef,
