--- a/src/stubs/sass/config/_grid.scss
+++ b/src/stubs/sass/config/_grid.scss
@@ -1,6 +1,6 @@
 // @use '@whitecube/white-sass/config';
 // $config: (
-//     'unit': 1em, // Unit used in the gridz-system. Possible values : 1px, 1em, 1rem, 1banana (all available css units except '%')
+//     'unit': 1rem, // Unit used in the gridz-system. Possible values : 1px, 1em, 1rem, 1banana (all available css units except '%')
 //     'columns': 12, // Number of columns you want in the grid
 //     'width': 1200, // Base grid-size (without units but based on pixels)
 //     'gutter_size': 24, // Base gutter-size (without units but based on pixels)
