--- a/src/stubs/sass/config/_radius.scss
+++ b/src/stubs/sass/config/_radius.scss
@@ -2,12 +2,17 @@
 *   All radius related variables.
 */
 
-// @use '../lib/config';
+//@use "@whitecube/white-sass/config";
 
 // $config: (
-//     'cards': 20,
-//     'buttons': 16,
-//     'label': 8,
+//     'desktop': (
+//         'cards': 20,
+//         'buttons': 16,
+//         'label': 8,
+//     ),
+//     'mobile': (
+//         'cards': 10,
+//     ),
 // );
 
 // @include config.merge('radius', $config);
