--- a/src/stubs/sass/config/_spacings.scss
+++ b/src/stubs/sass/config/_spacings.scss
@@ -20,14 +20,19 @@
 //             's': 40,
 //             'm': 64,
 //             'l': 80,
-//             'xl': 168,
+//             'xl': 128,
 //         ),
 //     ),
 
 //     'mobile': (
+//         'gap': (
+//             'xl': 28,
+//         ),
 //         'padding': (
 //             's': 20,
-//             'm': 10,
+//             'm': 32,
+//             'l': 64,
+//             'xl': 72,
 //         ),
 //     ),
 // );
