--- a/tests/sass/tools/functions/_color.scss
+++ b/tests/sass/tools/functions/_color.scss
@@ -1,6 +1,6 @@
 @use "../../../../src/sass/tools/functions/color" as *;
 
 .color {
-  color: color("wireframe.000");
-  color: color("wireframe", "000");
+  color: color("grey.000");
+  color: color("grey", "000");
 }
